feat(project): install nestjs application

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cheol-nx",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "backend:app:serve": "nx serve backend-app"
+  },
   "private": true,
   "workspaces": [
     "packages/**"
